rabbit_clockwise_move working

--- a/rabbits_and_foxes.ipynb
+++ b/rabbits_and_foxes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,62 +28,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def is_side(index):\n",
-    "    switch = {\n",
-    "        0: False,\n",
-    "        1: True,\n",
-    "        2: False,\n",
-    "        3: True,\n",
-    "        4: True,\n",
-    "        5: False,\n",
-    "        6: True,\n",
-    "        7: False\n",
-    "    }\n",
-    "    return switch.get(index, \"Invalid index\")\n",
-    "\n",
-    "def get_neighbors(index):\n",
-    "    switch = {\n",
-    "        0: [3, 1],\n",
-    "        1: [0, 2],\n",
-    "        2: [1, 4],\n",
-    "        3: [5, 0],\n",
-    "        4: [2, 7],\n",
-    "        5: [6, 3],\n",
-    "        6: [7, 5],\n",
-    "        7: [4, 6]\n",
-    "    }\n",
-    "    return switch.get(index, \"Invalid index\")\n",
-    "\n",
-    "def look_next(index, clockwise):\n",
-    "    neighbors = get_neighbors(index)\n",
+    "def get_neighbors(index, clockwise):\n",
+    "    neighbors = []\n",
     "    if clockwise:\n",
-    "        return neighbors[1]\n",
+    "        neighbors.append((index - 1) % 8)\n",
+    "        neighbors.append((index + 1) % 8)\n",
     "    else:\n",
-    "        return neighbors[0]"
+    "        neighbors.append((index + 1) % 8)\n",
+    "        neighbors.append((index - 1) % 8)\n",
+    "    return neighbors"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4"
+       "[0, 6]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "look_next(7, False)"
+    "get_neighbors(7, False)"
    ]
   },
   {
@@ -96,16 +73,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "7"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,72 +103,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This function receives the current state (s) of the system and returns the next state\n",
-    "# The current state is an array of eight integers, \n",
-    "# 0 := Absence of foxes\n",
-    "# 1 := Presence of foxes\n",
-    "# state index:\n",
-    "# 0 1 2\n",
-    "# 3   4\n",
-    "# 5 6 7\n",
-    "\n",
-    "def rabbit_strategy(id, s, preferred_direction, clockwise):\n",
-    "    neighbors = get_neighbors(preferred_direction)\n",
-    "    if not ( s[preferred_direction] \n",
-    "            or s[neighbors[0]] \n",
-    "            or s[neighbors[1]] ):\n",
-    "        return preferred_direction\n",
-    "    elif clockwise:\n",
-    "        DANGER = True\n",
-    "        current_direction = preferred_direction\n",
-    "        evaluated_directions = 1\n",
-    "        while DANGER and evaluated_directions < 8:\n",
-    "            current_direction = (current_direction + 1) % 8\n",
-    "            neighbors = get_neighbors(current_direction)\n",
-    "            if not ( s[current_direction] \n",
-    "                    or s[neighbors[0]] \n",
-    "                    or s[neighbors[1]] ):\n",
-    "                return current_direction\n",
-    "            evaluated_directions += 1\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# This function receives the current state (s) of the system and returns the next state\n",
-    "# The current state is an array of eight integers, \n",
-    "# 0 := Absence of foxes\n",
-    "# 1 := Presence of foxes\n",
-    "# state index:\n",
+    "# This function receives the current state (s) of \n",
+    "# the system and returns the next state.\n",
+    "# The current state (s) is an array of eight integers, \n",
+    "# s[i] := amount of foxes in the i-th direction\n",
+    "# state index, same as directions:\n",
     "# 0 1 2\n",
     "# 7   3\n",
     "# 6 5 4\n",
     "\n",
-    "def rabbit_strategy(id, s, preferred_direction, clockwise):\n",
-    "    neighbors = get_neighbors(preferred_direction)\n",
+    "def rabbit_clockwise_move(s, preferred_direction, clockwise):\n",
+    "    neighbors = get_neighbors(preferred_direction, clockwise)\n",
     "    if not ( s[preferred_direction] \n",
     "            or s[neighbors[0]] \n",
     "            or s[neighbors[1]] ):\n",
-    "        return preferred_direction\n",
-    "    elif clockwise:\n",
-    "        DANGER = True\n",
-    "        current_direction = preferred_direction\n",
-    "        evaluated_directions = 1\n",
-    "        while DANGER and evaluated_directions < 8:\n",
+    "        return preferred_direction # safe from visible foxes\n",
+    "    \n",
+    "    current_direction = preferred_direction\n",
+    "    evaluated_safe_directions = 1\n",
+    "    while evaluated_safe_directions < 8:\n",
+    "        if clockwise:\n",
     "            current_direction = (current_direction + 1) % 8\n",
-    "            neighbors = get_neighbors(current_direction)\n",
-    "            if not ( s[current_direction] \n",
-    "                    or s[neighbors[0]] \n",
-    "                    or s[neighbors[1]] ):\n",
-    "                return current_direction\n",
-    "            evaluated_directions += 1"
+    "        else:\n",
+    "            current_direction = (current_direction - 1) % 8\n",
+    "\n",
+    "        neighbors = get_neighbors(current_direction, clockwise)\n",
+    "        if not ( s[current_direction] \n",
+    "                or s[neighbors[0]] \n",
+    "                or s[neighbors[1]] ):\n",
+    "            return current_direction # safe from visible foxes\n",
+    "        evaluated_safe_directions += 1\n",
+    "\n",
+    "    if not (s[preferred_direction]):\n",
+    "        return preferred_direction\n",
+    "\n",
+    "    evaluated_unsafe_directions = 1\n",
+    "    while evaluated_unsafe_directions < 8:\n",
+    "        if clockwise:\n",
+    "            current_direction = (current_direction + 1) % 8\n",
+    "        else:\n",
+    "            current_direction = (current_direction - 1) % 8\n",
+    "\n",
+    "        if not (s[current_direction]):\n",
+    "            return current_direction\n",
+    "        evaluated_unsafe_directions += 1\n",
+    "    \n",
+    "    return np.argmin(s)\n",
+    "        \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rabbit_clockwise_move([0, 0, 0, 0, 3, 0, 0, 0], 5, False)"
    ]
   },
   {
@@ -219,30 +202,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# returns an array of tuples (length = 2) with the last generation chromosomes and their fitness\n",
+    "# returns the state of the system after one time unit\n",
     "\n",
-    "def evolve(rabbits, foxes, timeUnit, rabbit_strategies, fox_strategies, edge_length):\n",
-    "    \"\"\"\n",
-    "    Applay the genetic algorithm to the chromosomeArray.\n",
-    "    Args:\n",
-    "        chromosomeArray: (numpy.ndarray) the array of chromosomes to evolve (the 0 generation).\n",
-    "        fitnessFunction:((chromosome) -> float) the function that calculates the \n",
-    "            fitness of each chromosome.\n",
-    "        generations: (int) the number of generations to evolve.\n",
-    "\n",
-    "    Returns:\n",
-    "        (chromosomeArray, fitnessArray, stored, meanFitnessArray)\n",
-    "    \"\"\"\n",
-    "    currentGeneration = 0\n",
-    "    stored = []\n",
-    "    while currentGeneration < generations:\n",
-    "        fitnessArray = np.apply_along_axis(fitnessFunction, 1, chromosomeArray)\n",
-    "        \n",
-    "        # get the chromosomes that meet the storingCriteriaFunction conditions."
+    "def evolve(rabbits, foxes, rabbit_strategies, fox_strategies, edge_length):\n",
+    "    pass\n",
+    "    "
    ]
   },
   {
@@ -255,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
