get_animals_around() ok

--- a/rabbits_and_foxes.ipynb
+++ b/rabbits_and_foxes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,22 +45,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_corner(dir):\n",
+    "    switch = {\n",
+    "        0: True,\n",
+    "        1: False,\n",
+    "        2: True,\n",
+    "        3: False,\n",
+    "        4: True,\n",
+    "        5: False,\n",
+    "        6: True,\n",
+    "        7: False\n",
+    "    }\n",
+    "    return switch.get(dir, False)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[0, 6]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Corner\n"
+     ]
     }
    ],
    "source": [
-    "get_neighbors(7, False)"
+    "if (is_corner(0)):\n",
+    "    print(\"Corner\")\n",
+    "else:\n",
+    "    print(\"Not a corner\")"
    ]
   },
   {
@@ -98,7 +119,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Rabbit Strategies"
+    "## Rabbit Strategies\n",
+    "* clockwise_move()"
    ]
   },
   {
@@ -107,38 +129,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This function receives the current state (s) of \n",
+    "# This function receives the current state (f) of \n",
     "# the system and returns the next state.\n",
-    "# The current state (s) is an array of eight integers, \n",
-    "# s[i] := amount of foxes in the i-th direction\n",
+    "# The current state (f) is an array of eight integers, \n",
+    "# f[i] := amount of foxes in the i-th direction\n",
     "# state index, same as directions:\n",
     "# 0 1 2\n",
     "# 7   3\n",
     "# 6 5 4\n",
     "\n",
-    "def rabbit_clockwise_move(s, preferred_direction, clockwise):\n",
+    "def clockwise_move(f, preferred_direction, clockwise):\n",
     "    neighbors = get_neighbors(preferred_direction, clockwise)\n",
-    "    if not ( s[preferred_direction] \n",
-    "            or s[neighbors[0]] \n",
-    "            or s[neighbors[1]] ):\n",
+    "    if not ( f[preferred_direction] \n",
+    "            or f[neighbors[0]] \n",
+    "            or f[neighbors[1]] ):\n",
     "        return preferred_direction # safe from visible foxes\n",
     "    \n",
     "    current_direction = preferred_direction\n",
-    "    evaluated_safe_directions = 1\n",
-    "    while evaluated_safe_directions < 8:\n",
+    "    evaluated_safer_directions = 1\n",
+    "    while evaluated_safer_directions < 8:\n",
     "        if clockwise:\n",
     "            current_direction = (current_direction + 1) % 8\n",
     "        else:\n",
     "            current_direction = (current_direction - 1) % 8\n",
     "\n",
     "        neighbors = get_neighbors(current_direction, clockwise)\n",
-    "        if not ( s[current_direction] \n",
-    "                or s[neighbors[0]] \n",
-    "                or s[neighbors[1]] ):\n",
+    "        if not ( f[current_direction] \n",
+    "                or f[neighbors[0]] \n",
+    "                or f[neighbors[1]] ):\n",
     "            return current_direction # safe from visible foxes\n",
-    "        evaluated_safe_directions += 1\n",
+    "        evaluated_safer_directions += 1\n",
     "\n",
-    "    if not (s[preferred_direction]):\n",
+    "    if not (f[preferred_direction]):\n",
     "        return preferred_direction\n",
     "\n",
     "    evaluated_unsafe_directions = 1\n",
@@ -148,11 +170,11 @@
     "        else:\n",
     "            current_direction = (current_direction - 1) % 8\n",
     "\n",
-    "        if not (s[current_direction]):\n",
+    "        if not (f[current_direction]):\n",
     "            return current_direction\n",
     "        evaluated_unsafe_directions += 1\n",
     "    \n",
-    "    return np.argmin(s)\n",
+    "    return np.argmin(f)\n",
     "        \n",
     "        "
    ]
@@ -165,7 +187,7 @@
     {
      "data": {
       "text/plain": [
-       "2"
+       "1"
       ]
      },
      "execution_count": 7,
@@ -174,7 +196,7 @@
     }
    ],
    "source": [
-    "rabbit_clockwise_move([0, 0, 0, 0, 3, 0, 0, 0], 5, False)"
+    "clockwise_move([10, 0, 1, 1, 3, 1, 0, 2], 5, False)"
    ]
   },
   {
@@ -182,15 +204,278 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Fox Strategies"
+    "## Fox Strategies\n",
+    "* hunting_1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# This function receives the current state (r) of \n",
+    "# the system and returns the next state.\n",
+    "# The current state (r) is an array of eight integers, \n",
+    "# r[i] := amount of rabbits in the i-th direction\n",
+    "# state index, same as directions:\n",
+    "# 0 1 2\n",
+    "# 7   3\n",
+    "# 6 5 4\n",
+    "\n",
+    "\n",
+    "def hunting_1(r, preferred_direction, clockwise, diagonal_prediction):\n",
+    "    if not( np.any(r) ):\n",
+    "        return preferred_direction\n",
+    "    best_direction = np.argmax(r)\n",
+    "    neighbors = get_neighbors(best_direction, clockwise)\n",
+    "    if is_corner( best_direction ) or not( diagonal_prediction ):\n",
+    "        return neighbors[1]\n",
+    "    else:\n",
+    "        return get_neighbors(neighbors[1], clockwise)[1]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 0 1 2\n",
+    "# 7   3\n",
+    "# 6 5 4\n",
+    "r = [0, 0, 2, 0, 0, 0, 0, 1]\n",
+    "\n",
+    "hunting_1(r, 0, True, False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rabbit_amounts = [0, 0, 1, 3, 4, 1, 0, 0]\n",
+    "hunting_1(rabbit_amounts, 2, clockwise = True, diagonal_prediction = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.argmax(rabbit_amounts)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Grid"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## valid_position()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def valid_position(row, col, shape):\n",
+    "    height, width, aux = shape\n",
+    "    if row == -1:\n",
+    "        row = height - 1\n",
+    "    elif row == height:\n",
+    "        row = 0\n",
+    "\n",
+    "    if col == -1:\n",
+    "        col = width - 1\n",
+    "    elif col == width:\n",
+    "        col = 0\n",
+    "    \n",
+    "    return row, col"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## get_animals_around()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 0,  1],\n",
+       "        [ 2,  3],\n",
+       "        [ 4,  5],\n",
+       "        [ 6,  7]],\n",
+       "\n",
+       "       [[ 8,  9],\n",
+       "        [10, 11],\n",
+       "        [12, 13],\n",
+       "        [14, 15]],\n",
+       "\n",
+       "       [[16, 17],\n",
+       "        [18, 19],\n",
+       "        [20, 21],\n",
+       "        [22, 23]]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# [row, column, [rabbits, foxes]]\n",
+    "height = 3\n",
+    "width = 4\n",
+    "\n",
+    "grid = np.zeros((height, width, 2), dtype=int)\n",
+    "\n",
+    "c = 0\n",
+    "for row in range(height):\n",
+    "    for col in range(width):\n",
+    "        grid[row, col, 0] = c\n",
+    "        grid[row, col, 1] = c + 1\n",
+    "        c += 2\n",
+    "grid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# [row, column, [rabbits, foxes]]\n",
+    "\n",
+    "# 0 1 2\n",
+    "# 7   3\n",
+    "# 6 5 4\n",
+    "\n",
+    "def get_animals_around(grid, row, col, animal):\n",
+    "\n",
+    "    height, width = grid.shape[:2]\n",
+    "    if valid_position(row, col, grid.shape) != (row, col):\n",
+    "        print(\"Invalid position: ({}, {})\".format(row, col))\n",
+    "        return None\n",
+    "\n",
+    "    map = np.zeros(8, dtype=int)\n",
+    "    \n",
+    "    for i in range(3):\n",
+    "        valid_row, valid_col = valid_position(row - 1, col - 1 + i, grid.shape)\n",
+    "        if animal == \"rabbits\":\n",
+    "            map[i] = grid[valid_row, valid_col, 0]\n",
+    "        elif animal == \"foxes\":\n",
+    "            map[i] = grid[valid_row, valid_col, 1]\n",
+    "    \n",
+    "    \n",
+    "    valid_row, valid_col = valid_position(row, col + 1, grid.shape)\n",
+    "    if animal == \"rabbits\":\n",
+    "        map[3] = grid[valid_row, valid_col, 0]\n",
+    "    elif animal == \"foxes\":\n",
+    "        map[3] = grid[valid_row, valid_col, 1]\n",
+    "    \n",
+    "\n",
+    "    for i in range(3):\n",
+    "        valid_row, valid_col = valid_position(row + 1, col + 1 - i, grid.shape)\n",
+    "        if animal == \"rabbits\":\n",
+    "            map[4 + i] = grid[valid_row, valid_col, 0]\n",
+    "        elif animal == \"foxes\":\n",
+    "            map[4 + i] = grid[valid_row, valid_col, 1]\n",
+    "    \n",
+    "    \n",
+    "    valid_row, valid_col = valid_position(row, col - 1, grid.shape)\n",
+    "    if animal == \"rabbits\":\n",
+    "        map[7] = grid[valid_row, valid_col, 0]\n",
+    "    elif animal == \"foxes\":\n",
+    "        map[7] = grid[valid_row, valid_col, 1]\n",
+    "\n",
+    "\n",
+    "    return map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([12, 14,  8, 16,  0,  6,  4, 20])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# height = 3\n",
+    "# width = 4\n",
+    "\n",
+    "# 0 1 2\n",
+    "# 7   3\n",
+    "# 6 5 4\n",
+    "\n",
+    "# 0  2  4  6\n",
+    "# 8  10 12 14\n",
+    "# 16 18 20 22\n",
+    "\n",
+    "\n",
+    "get_animals_around(grid, 2, 3, \"rabbits\")"
+   ]
   },
   {
    "attachments": {},
@@ -202,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -392,19 +677,21 @@
        "        [0, 0]]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# [row, column, [rabbits, foxes]]\n",
+    "\n",
     "grid = np.zeros((ROWS, COLUMNS, 2), dtype=int)\n",
     "grid"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,61 +720,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Click  (73, 57) Grid coordinates:  1 2\n",
-      "Click  (146, 68) Grid coordinates:  1 4\n",
-      "Click  (125, 334) Grid coordinates:  9 3\n",
-      "Click  (129, 333) Grid coordinates:  9 3\n",
-      "Click  (173, 293) Grid coordinates:  8 4\n",
-      "Click  (173, 293) Grid coordinates:  8 4\n",
-      "Click  (199, 245) Grid coordinates:  7 5\n",
-      "Click  (311, 324) Grid coordinates:  9 8\n",
-      "Click  (264, 183) Grid coordinates:  5 7\n",
-      "Click  (103, 247) Grid coordinates:  7 2\n",
-      "Click  (297, 99) Grid coordinates:  2 8\n",
-      "Click  (328, 344) Grid coordinates:  9 9\n",
-      "Click  (339, 296) Grid coordinates:  8 9\n",
-      "Click  (334, 232) Grid coordinates:  6 9\n",
-      "Click  (255, 190) Grid coordinates:  5 7\n",
-      "Click  (80, 193) Grid coordinates:  5 2\n",
-      "Click  (155, 114) Grid coordinates:  3 4\n",
-      "Click  (338, 215) Grid coordinates:  6 9\n",
-      "Click  (111, 176) Grid coordinates:  5 3\n",
-      "Click  (99, 123) Grid coordinates:  3 2\n",
-      "Click  (256, 83) Grid coordinates:  2 7\n",
-      "Click  (235, 186) Grid coordinates:  5 6\n",
-      "Click  (22, 256) Grid coordinates:  7 0\n",
-      "Click  (34, 204) Grid coordinates:  5 0\n",
-      "Click  (21, 115) Grid coordinates:  3 0\n",
-      "Click  (27, 51) Grid coordinates:  1 0\n",
-      "Click  (31, 26) Grid coordinates:  0 0\n",
-      "Click  (31, 26) Grid coordinates:  0 0\n",
-      "Click  (31, 26) Grid coordinates:  0 0\n",
-      "Click  (31, 26) Grid coordinates:  0 0\n",
-      "Click  (31, 26) Grid coordinates:  0 0\n",
-      "Click  (31, 26) Grid coordinates:  0 0\n",
-      "Click  (31, 26) Grid coordinates:  0 0\n",
-      "Click  (289, 113) Grid coordinates:  3 8\n",
-      "Click  (236, 111) Grid coordinates:  3 6\n",
-      "Click  (235, 283) Grid coordinates:  8 6\n",
-      "Click  (66, 311) Grid coordinates:  8 1\n",
-      "Click  (145, 167) Grid coordinates:  4 4\n",
-      "Click  (231, 126) Grid coordinates:  3 6\n",
-      "Click  (208, 21) Grid coordinates:  0 5\n",
-      "Click  (313, 5) Grid coordinates:  0 8\n",
-      "Click  (337, 93) Grid coordinates:  2 9\n",
-      "Click  (296, 147) Grid coordinates:  4 8\n",
-      "Click  (294, 240) Grid coordinates:  6 8\n",
-      "Click  (261, 263) Grid coordinates:  7 7\n",
-      "Click  (231, 225) Grid coordinates:  6 6\n",
-      "Click  (176, 226) Grid coordinates:  6 5\n",
-      "Click  (202, 164) Grid coordinates:  4 5\n"
+      "Click  (140, 115) Grid coordinates:  3 4\n",
+      "Click  (240, 171) Grid coordinates:  4 6\n",
+      "Click  (165, 239) Grid coordinates:  6 4\n",
+      "Click  (101, 153) Grid coordinates:  4 2\n",
+      "Click  (230, 71) Grid coordinates:  2 6\n",
+      "Click  (337, 287) Grid coordinates:  8 9\n",
+      "Click  (151, 326) Grid coordinates:  9 4\n",
+      "Click  (96, 180) Grid coordinates:  5 2\n",
+      "Click  (57, 249) Grid coordinates:  7 1\n",
+      "Click  (148, 274) Grid coordinates:  7 4\n",
+      "Click  (204, 236) Grid coordinates:  6 5\n",
+      "Click  (283, 146) Grid coordinates:  4 8\n",
+      "Click  (175, 90) Grid coordinates:  2 5\n",
+      "Click  (41, 147) Grid coordinates:  4 1\n",
+      "Click  (107, 230) Grid coordinates:  6 3\n",
+      "Click  (188, 223) Grid coordinates:  6 5\n",
+      "Click  (259, 213) Grid coordinates:  6 7\n",
+      "Click  (327, 328) Grid coordinates:  9 9\n",
+      "Click  (34, 25) Grid coordinates:  0 0\n",
+      "Click  (105, 98) Grid coordinates:  2 3\n",
+      "Click  (86, 93) Grid coordinates:  2 2\n"
      ]
     }
    ],
